removed border line

--- a/src/Components/SuccessScreen/SuccessScreen.css
+++ b/src/Components/SuccessScreen/SuccessScreen.css
@@ -1,5 +1,5 @@
 .successScreenContainer {
-    border: 1px solid yellow;
+    /* border: 1px solid yellow; */
     border-radius: 20px;
     text-align: center;
     box-sizing: border-box;
